Direction links open new page and specification of environment variables

--- a/main-service/default-app.yaml
+++ b/main-service/default-app.yaml
@@ -3,3 +3,5 @@ service: default
 
 env_variables:
   SECERT_KEY: "884f33f5-4818-4543-9f7e-a4fbb9973c04"
+  USER_SERVICE_ADDRESS: "https://user-dot-lustrous-oasis-253108.appspot.com"
+  EVENT_SERVICE_ADDRESS: "https://event-dot-lustrous-oasis-253108.appspot.com"
